# health-hub-pms

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .example.env  Dockerfile  app.py  pyproject.toml  seed.py
backend/database/: __init__.py  models.py
backend/database/migrations/versions/: 0a4065ac37fb_remove_id_field.py  208c3d0ec3b1_remove_facility_id_foreign_keys.py  3254b98c9937_creates_consent_records_table_and_.py  38170bec0007_implement_new_relationships_for_patient_.py  3c4fedf2df82_creates_access_log_model_and_.py  45892d57062e_creates_healthcare_facility_model_and_.py  53a779702441_re_introduces_facility_id_relationships.py  547dd2223c42_adds_emergency_contact_and_address_.py  6c9ce281db23_creates_healthcare_worker_model.py  95aaaf419a90_adds_unique_constraints.py  aa343fef8269_change_facility_id_datatype_to_strings.py  aa43e91c1116_creates_user_model.py  c93178969e31_change_patient_id_datatype_from_integer_.py  deda020e2fc6_change_patient_id_datatype_from_integer_.py  f9119e530b6f_creates_patient_model_and_establishes_.py  ffc549cbf704_increased_string_length_for_encrypted_.py
backend/routes/: __init__.py  access_logs.py  auth.py  consent_management.py  facilities.py
backend/utils/: security_utils.py
frontend/: Dockerfile  index.html  package-lock.json
frontend/src/: App.jsx
frontend/src/components/: AccessLogList.jsx  AdminAccessLogs.jsx  Layout.jsx  PatientConsents.jsx  (+2 more)
mock-registry/: .env.example  Dockerfile  data.py  main.py  pyproject.toml  seed.py  seed_data.json
mock-registry/utils/: __init__.py
(+10 files in other folders)
